fix: temp fix to white space under footer issue on contact me page

--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -5,6 +5,7 @@
 }
 
 .contact-main {
+    height: 61vh;
     .wrapper {
         display: flex;
         gap: 3rem;
@@ -40,3 +41,9 @@
     }
 }
 
+.contact-page-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+}
